Reword 'What is your home address?' to 'What is your address?'

--- a/app/views/mvp_v1_1/home-address-manual.html
+++ b/app/views/mvp_v1_1/home-address-manual.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout.html' %}
 
 {% block page_title %}
-  Your home address :
+  Your address :
   {% if practiceName %}
     Register with {{ practiceName }}
   {% else %}
@@ -11,7 +11,7 @@
 
 {% block content %}
 
-  <h1 class="primary">What is your home address?</h1>
+  <h1 class="primary">What is your address?</h1>
 
   <form method="post" class="measure">
     <fieldset>
