--- a/app/views/mvp_v1_1/registration-submitted.html
+++ b/app/views/mvp_v1_1/registration-submitted.html
@@ -11,11 +11,9 @@
 {% block content %}
   <div class="measure">
 
-    <h1>Thank you</h1>
-
     <div class="signage completion">
       <div>
-        <p>Your details have been sent to {{ practiceName }} and you’ll get an email confirming this.</p>
+        <h1 class="body">Your details have been sent to {{ practiceName }} and you’ll get an email confirming this.</h1>
       </div>
     </div>
 
