--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -32,7 +32,8 @@ we can add other blues, named like blue40 (for a lighter blue) or blue60 for a d
 
 16px
 */
-body, pre.user-input {
+body, pre.user-input,
+.body {
   font-family: "Frutiger Neue", "Frutiger", sans-serif;
   font-weight: 400;
   font-size: 20px;
