Explain what happens when you submit details

--- a/app/views/mvp_v1_1/confirm-details.html
+++ b/app/views/mvp_v1_1/confirm-details.html
@@ -232,7 +232,8 @@
   </table>
 
   <div class="shunt-2">
-    <a href="registration-submitted" class="button">Send my details and register</a>
+    <a href="registration-submitted" class="button">Send my details</a>
+    <p class="measure form-hint shunt">Your details will be sent to {{ practiceName }} to begin your registration. You’ll get an email confirming this.</p>
   </div>
 
 {% endblock %}
