--- a/app/views/mvp_v1_1/confirm-details.html
+++ b/app/views/mvp_v1_1/confirm-details.html
@@ -240,7 +240,7 @@
 
   <div class="shunt-2">
     <a href="registration-submitted" class="button">Send my details</a>
-    <p class="measure form-hint shunt">Your details will be sent to {{ practiceName }} to begin your registration. You’ll get an email confirming this.</p>
+    <p class="measure form-hint shunt">Your details will be sent to {{ practiceName }} to begin your registration. A confirmation email will be sent to {{ session.contact.email }}.</p>
   </div>
 
 {% endblock %}
