Tweak armed forces language a bit

--- a/app/views/mvp_v1_1/armed-forces.html
+++ b/app/views/mvp_v1_1/armed-forces.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 
-  <h1 class="primary">Are you returning from the Armed Forces?</h1>
+  <h1 class="primary">Are you returning from the armed forces?</h1>
 
   <form method="post" class="measure">
 
@@ -44,7 +44,7 @@
       <summary>Why am I being asked this question?</summary>
       <div class="signage">
         <div class="info">
-          <p>If you’re a veteran, you’re entitled to priority care for any conditions relating to your time within the armed forces.</p>
+          <p>If you’ve served for at least one day in the armed forces (as a regular or a reservist) you’re entitled to priority care for any conditions relating to that time.</p>
           <p>Telling your new GP practice about your service will:</p>
           <ul>
             <li>start the transfer of your medical records from the Ministry of Defence</li>
