--- a/app/views/mvp_v1_1/armed-forces-enlistment-date.html
+++ b/app/views/mvp_v1_1/armed-forces-enlistment-date.html
@@ -12,7 +12,7 @@
 {% block content %}
 
   <h1 class="primary">
-    What was your enlistment date?
+    When did you enlist?
   </h1>
 
   <form method="post" class="measure">
