--- a/app/views/mvp_v1_1/current-medication.html
+++ b/app/views/mvp_v1_1/current-medication.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout.html' %}
 
 {% block page_title %}
-  Your previous address :
+  Your medication :
   {% if practiceName %}
     Register with {{ practiceName }}
   {% else %}
@@ -40,7 +40,7 @@
     </fieldset>
 
     <details>
-      <summary>Why am I being asked this question?</summary>
+      <summary>Why am I being asked this?</summary>
       <div class="signage">
         <div class="info">
           <p>Letting your new GP know about your medication will help them while they wait for your medical records to transfer.</p>
