--- a/app/views/mvp_v1_1/history.html
+++ b/app/views/mvp_v1_1/history.html
@@ -12,7 +12,7 @@
 {% block content %}
   <form method="post">
 
-    <h1 class="primary">Your medical history</h1>
+    <h1 class="primary">Your health</h1>
 
     <div class="measure">
 
@@ -25,20 +25,16 @@
       {% endif %}
 
       <div class="form-group {% if error %}-errors{% endif %}">
-        <label for="medical-history">Enter any details you want your new GP practice to know</label>
+        <label for="medical-history">Add any health concerns you want the GP to know about</label>
 
         <details>
-          <summary>What kind of details should I give?</summary>
+          <summary>Examples of things to tell the GP</summary>
           <div class="signage">
             <div class="info">
-              <p>
-                Anything you feel might be useful to your new GP. For example:
-              </p>
               <ul>
-                <li>any medical conditions you have such as asthma or diabetes</li>
-                <li>any treatments you’ve had to have in hospital</li>
-                <li>any allergies you have</li>
-                <li>any problems or illnesses you’ve had to see a doctor about regularly</li>
+                <li>any hospital visits</li>
+                <li>any medical conditions like asthma or diabetes</li>
+                <li>any health issues you’ve talked to a doctor about</li>
               </ul>
             </div>
           </div>
