Add get out of jail link from gp email with no session

--- a/app/views/mvp_v1_1/_email-gp-notification.html
+++ b/app/views/mvp_v1_1/_email-gp-notification.html
@@ -181,6 +181,13 @@
     </table>
 
   {% else %}
-    No session present, sorry.
+
+    <table width="100%" cellpadding="0" cellspacing="0" border="0">
+      <tr>
+        <td class="submissionContent" valign="top">
+          No session present, sorry. <a href="/mvp-v1.1/start" target="_blank">Go through MVP v1.1,</a> then refresh this page</td>
+        </td>
+      </tr>
+    </table>
   {% endif %}
 {% endblock %}
