--- a/app/views/mvp_v1_1/start.html
+++ b/app/views/mvp_v1_1/start.html
@@ -35,21 +35,24 @@
 
   <div class="measure">
 
-    <h2>You’ll be asked for your:</h2>
+    <h2>You’ll need to provide:</h2>
 
     <ul>
-      <li>name and address</li>
-      <li>previous name and address</li>
+      <li>your name and date of birth</li>
       <li>contact details</li>
-      <li>date of birth</li>
+      <li>your address</li>
     </ul>
 
-    <p>It helps your new GP find any previous medical records if you know the following:</p>
+    <h3>Other things you’ll be asked</h3>
+
+    <p>It will help {{ practiceName }} find your medical records if you’re able to provide as much information as you can. This could include:</p>
 
     <ul>
-      <li>your NHS number</li>
-      <li>your previous GP</li>
-      <li>your military service personnel number (if you have one) and date you joined the military</li>
+      <li>the GP you’re currently registered with if you have one</li>
+      <li>the name or address under which you’re registered with your current GP (if they’re different)</li>
+      <li>details of any allergies, medication and your general health</li>
+      <li>your military service number (if you have one) and enlistment date</li>
+      <li>your NHS number if you know it</li>
     </ul>
 
     <details>
