--- a/app/assets/sass/modules/layout/_layout.scss
+++ b/app/assets/sass/modules/layout/_layout.scss
@@ -7,6 +7,8 @@ body {
 // Block for a layout "row" - i.e. header, content, footer
 %block,
 .content {
+  @extend %contain-floats;
+  
   max-width: 960px;
   margin: 0 auto;
   padding-left: 20px;
