--- a/app/assets/sass/modules/controls/_breadcrumbs.scss
+++ b/app/assets/sass/modules/controls/_breadcrumbs.scss
@@ -9,12 +9,21 @@
   li {
     float: left;
   }
-  
+
   li.selected {
+    display: none;
     font-size: 16px;
     line-height: 24px;
     margin-top:12px;
     padding-left: $leading/4;
     letter-spacing:-0.1px;
+
+    @include media(mid) {
+      display: block;
+    };
+  }
+
+  .button {
+    margin-bottom: 0;
   }
 }
