--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -201,11 +201,22 @@ a:focus {
 }
 
 .breadcrumb li.selected {
+  display: none;
   font-size: 16px;
   line-height: 24px;
   margin-top: 12px;
   padding-left: 4px;
   letter-spacing: -0.1px;
+}
+
+@media (min-width: 500px) {
+  .breadcrumb li.selected {
+    display: block;
+  }
+}
+
+.breadcrumb .button {
+  margin-bottom: 0;
 }
 
 .button::-moz-focus-inner {
