--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -886,11 +886,14 @@ textarea:focus {
 .header-panel {
   color: #fff;
   background-color: #0072c6;
-  padding-top: 48px;
-  padding-left: 32px;
-  padding-right: 32px;
-  padding-bottom: 32px;
+  padding: 32px 16px 16px 16px;
   margin-bottom: 32px;
+}
+
+@media (min-width: 500px) {
+  .header-panel {
+    padding: 48px 32px 32px 32px;
+  }
 }
 
 .header-panel .header {
