--- a/app/assets/sass/modules/signage/_info.scss
+++ b/app/assets/sass/modules/signage/_info.scss
@@ -4,7 +4,11 @@
 
   & > div {
     float: left;
-    padding: 0 $leading*2;
+    padding: 0 $leading;
+
+    @include media(mid) {
+      padding: 0 $leading*2;
+    }
   }
 }
 
