-small field to full width, use 'tel' input hack for NHS number

--- a/app/views/mvp_v1_1/nhs-number-details.html
+++ b/app/views/mvp_v1_1/nhs-number-details.html
@@ -26,7 +26,7 @@
         </div>
       {% endif %}
       <div class="form-group {% if error %}-errors{% endif %}">
-        <input type="text" id="nhs-number" name="nhs-number" value="{{ session.nhsnumber.number }}" class="-small">
+        <input type="tel" id="nhs-number" name="nhs-number" value="{{ session.nhsnumber.number }}" class="-small">
       </div>
       <p class="form-hint">
         For example, 943 476 5919
