Add email form type

--- a/app/assets/sass/modules/forms/_input.scss
+++ b/app/assets/sass/modules/forms/_input.scss
@@ -1,6 +1,7 @@
 input[type='text'],
 input[type='number'],
-input[type='tel'] {
+input[type='tel'],
+input[type='email'] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
