--- a/app/views/mvp_v1_1/contact-email.html
+++ b/app/views/mvp_v1_1/contact-email.html
@@ -25,7 +25,7 @@
     {% endif %}
 
     <div class="form-group">
-      <input type="text" id="email" name="email" value="{{ session.contact.email }}">
+      <input type="email" id="email" name="email" value="{{ session.contact.email }}">
     </div>
 
     <details>
