--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -486,7 +486,8 @@ form {
 
 input[type='text'],
 input[type='number'],
-input[type='tel'] {
+input[type='tel'],
+input[type='email'] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -508,14 +509,16 @@ input[type='tel'] {
 @media (min-width: 500px) {
   input[type='text'],
   input[type='number'],
-  input[type='tel'] {
+  input[type='tel'],
+  input[type='email'] {
     width: 75%;
   }
 }
 
 input[type='text']:focus,
 input[type='number']:focus,
-input[type='tel']:focus {
+input[type='tel']:focus,
+input[type='email']:focus {
   outline: 0;
   -webkit-box-shadow: 0 0 0 5px #F7E214;
   -moz-box-shadow: 0 0 0 5px #F7E214;
@@ -525,7 +528,8 @@ input[type='tel']:focus {
 @media (min-width: 500px) {
   input[type='text'].-small,
   input[type='number'].-small,
-  input[type='tel'].-small {
+  input[type='tel'].-small,
+  input[type='email'].-small {
     width: 8em;
   }
 }
