--- a/app/views/mvp_v1_1/contact-telephone.html
+++ b/app/views/mvp_v1_1/contact-telephone.html
@@ -20,7 +20,7 @@
       </div>
       <div class="form-group">
         <label for="mobile">Mobile (optional)</label>
-        <input type="text" id="mobile" name="mobile" value="{{ session.contact.mobile }}">
+        <input type="tel" id="mobile" name="mobile" value="{{ session.contact.mobile }}">
       </div>
 
       <details>
