--- a/app/assets/sass/modules/data/_table.scss
+++ b/app/assets/sass/modules/data/_table.scss
@@ -13,14 +13,20 @@ table {
   }
 
   th, td {
+    padding: $leading/2 $leading/8;
+
     text-align: left;
     vertical-align: top;
-    padding: $leading $leading/2;
 
     font-weight: $bodyweight;
     font-size: $smallprint;
 
     border-bottom: 1px solid $pale-grey;
+
+    @include media(mid) {
+      display: table-cell;
+      padding: $leading $leading/2;
+    }
   }
 
   th {
@@ -43,7 +49,7 @@ table {
 
   &.compact {
     margin-bottom: $leading;
-    
+
     th, td {
       padding: leading/2;
     }
