--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -325,12 +325,19 @@ table caption {
 }
 
 table th, table td {
+  padding: 8px 2px;
   text-align: left;
   vertical-align: top;
-  padding: 16px 8px;
   font-weight: 400;
   font-size: 16px;
   border-bottom: 1px solid #d9e1e2;
+}
+
+@media (min-width: 500px) {
+  table th, table td {
+    display: table-cell;
+    padding: 16px 8px;
+  }
 }
 
 table th {
