Fix display bug with phone numbers

--- a/app/views/mvp_v1_1/_email-gp-notification.html
+++ b/app/views/mvp_v1_1/_email-gp-notification.html
@@ -24,9 +24,9 @@
       <tr>
         <td class="submissionTitle" valign="top">Telephone</td>
         <td class="submissionContent" valign="top">
-          {% if session.contact.telephone != '' and session.contact.mobile != '' %}
+          {% if session.contact.telephone != '' or session.contact.mobile != '' %}
             {% if session.contact.telephone != '' %}
-              {{ session.contact.telephone }}
+              {{ session.contact.telephone }}<br>
             {% endif %}
             {% if session.contact.mobile != '' %}
               {{ session.contact.mobile }}
